@@ -25,18 +25,19 @@ import org.openremote.model.asset.*;
 import org.openremote.model.asset.agent.ConnectionStatus;
 import org.openremote.model.asset.impl.GatewayAsset;
 import org.openremote.model.attribute.AttributeEvent;
-import org.openremote.model.event.shared.EventRequestResponseWrapper;
 import org.openremote.model.event.shared.SharedEvent;
 import org.openremote.model.gateway.*;
 import org.openremote.model.query.AssetQuery;
 import org.openremote.model.syslog.SyslogCategory;
 import org.openremote.model.util.Pair;
-import org.openremote.model.util.UniqueIdentifierGenerator;
 
 import java.util.*;
 import java.util.concurrent.*;
 import java.util.concurrent.atomic.AtomicReference;
-import java.util.function.*;
+import java.util.function.BiFunction;
+import java.util.function.Consumer;
+import java.util.function.Function;
+import java.util.function.ToIntFunction;
 import java.util.logging.Level;
 import java.util.logging.Logger;
 import java.util.stream.Collectors;
@@ -60,11 +61,10 @@ public class GatewayConnector {
     protected final String realm;
     protected final String gatewayId;
     protected final AssetStorageService assetStorageService;
-    protected final ScheduledExecutorService executorService;
+    protected final ExecutorService executorService;
+    protected final ScheduledExecutorService scheduledExecutorService;
     protected final AssetProcessingService assetProcessingService;
     protected final GatewayService gatewayService;
-    protected final Map<String, Asset<?>> pendingAssetMerges = new HashMap<>();
-    protected final AtomicReference<EventRequestResponseWrapper<DeleteAssetsRequestEvent>> pendingAssetDelete = new AtomicReference<>();
     protected List<AssetEvent> cachedAssetEvents;
     protected List<AttributeEvent> cachedAttributeEvents;
     protected Consumer<Object> gatewayMessageConsumer;
@@ -73,12 +73,14 @@ public class GatewayConnector {
     protected boolean disabled;
     protected boolean initialSyncInProgress;
     protected ScheduledFuture<?> syncProcessorFuture;
+    protected Future<?> capabilitiesFuture;
     List<String> syncAssetIds;
+    protected GatewayAsset gatewayAsset;
     int syncIndex;
     int syncErrors;
     String expectedSyncResponseName;
     protected boolean tunnellingSupported;
-    protected final Map<Class<? extends SharedEvent>, BiConsumer<String, SharedEvent>> eventConsumerMap = new HashMap<>();
+    protected final Map<Class<? extends SharedEvent>, Consumer<SharedEvent>> eventConsumerMap = new HashMap<>();
 
     protected static List<Integer> ALPHA_NUMERIC_CHARACTERS = new ArrayList<>(62);
 
@@ -97,23 +99,25 @@ public class GatewayConnector {
     protected GatewayConnector(
         AssetStorageService assetStorageService,
         AssetProcessingService assetProcessingService,
-        ScheduledExecutorService executorService,
+        ExecutorService executorService,
+        ScheduledExecutorService scheduledExecutorService,
         GatewayService gatewayService,
         GatewayAsset gateway) {
 
         this.assetStorageService = assetStorageService;
         this.assetProcessingService = assetProcessingService;
         this.executorService = executorService;
+        this.scheduledExecutorService = scheduledExecutorService;
         this.gatewayService = gatewayService;
         this.disabled = gateway.getDisabled().orElse(false);
         this.realm = gateway.getRealm();
         this.gatewayId = gateway.getId();
+        this.gatewayAsset = gateway;
 
         // Setup static inbound event handling
         synchronized(eventConsumerMap) {
-            eventConsumerMap.put(AssetEvent.class, (msgId, e) -> onAssetEvent((AssetEvent) e));
-            eventConsumerMap.put(AttributeEvent.class, (msgId, e) -> onAttributeEvent((AttributeEvent) e));
-            eventConsumerMap.put(DeleteAssetsResponseEvent.class, (msgId, e) -> onAssetDeleteResponseEvent(msgId, (DeleteAssetsResponseEvent) e));
+            eventConsumerMap.put(AssetEvent.class, (e) -> onAssetEvent((AssetEvent) e));
+            eventConsumerMap.put(AttributeEvent.class, (e) -> onAttributeEvent((AttributeEvent) e));
         }
         publishAttributeEvent(new AttributeEvent(gatewayId, GatewayAsset.STATUS, ConnectionStatus.DISCONNECTED));
     }
@@ -137,7 +141,7 @@ public class GatewayConnector {
 
         synchronized (this.sessionId) {
             if (getSessionId() != null) {
-                disconnect();
+                disconnect(GatewayDisconnectEvent.Reason.ALREADY_CONNECTED);
             }
             this.sessionId.set(sessionId);
         }
@@ -153,8 +157,7 @@ public class GatewayConnector {
         syncIndex = 0;
         syncErrors = 0;
 
-        publishAttributeEvent(new AttributeEvent(gatewayId, GatewayAsset.STATUS, ConnectionStatus.CONNECTED));
-
+        publishAttributeEvent(new AttributeEvent(gatewayId, GatewayAsset.STATUS, ConnectionStatus.CONNECTING));
         startSync();
     }
 
@@ -174,16 +177,21 @@ public class GatewayConnector {
             LOG.finest("Aborting active sync process: " + this);
             syncProcessorFuture.cancel(true);
         }
+        if (capabilitiesFuture != null) {
+            LOG.finest("Aborting capabilities request: " + this);
+            capabilitiesFuture.cancel(true);
+        }
 
         initialSyncInProgress = false;
-        pendingAssetMerges.clear();
-        pendingAssetDelete.set(null);
         publishAttributeEvent(new AttributeEvent(gatewayId, GatewayAsset.STATUS, ConnectionStatus.DISCONNECTED));
     }
 
-    protected void disconnect() {
+    protected void disconnect(GatewayDisconnectEvent.Reason reason) {
         synchronized (this.sessionId) {
             if (isConnected()) {
+                if (disabled) {
+                    sendMessageToGateway(new GatewayDisconnectEvent(reason));
+                }
                 requestDisconnect.run();
                 disconnected(getSessionId());
             }
@@ -207,48 +215,30 @@ public class GatewayConnector {
      */
     protected CompletableFuture<GatewayCapabilitiesResponseEvent> getCapabilities() {
 
-        final AtomicReference<GatewayCapabilitiesResponseEvent> responseRef = new AtomicReference<>();
+        CompletableFuture<GatewayCapabilitiesResponseEvent> future = new CompletableFuture<>();
 
         synchronized (eventConsumerMap) {
-            if (eventConsumerMap.containsKey(GatewayCapabilitiesRequestEvent.class)) {
+            if (eventConsumerMap.containsKey(GatewayCapabilitiesResponseEvent.class)) {
                 return CompletableFuture.failedFuture(new IllegalArgumentException("A capabilities request is already pending"));
             }
 
-            eventConsumerMap.put(GatewayCapabilitiesResponseEvent.class, (msgID, e) -> {
+            eventConsumerMap.put(GatewayCapabilitiesResponseEvent.class, (e) -> {
                 GatewayCapabilitiesResponseEvent response = (GatewayCapabilitiesResponseEvent) e;
-
-                synchronized (responseRef) {
-                    responseRef.set(response);
-                    responseRef.notify();
-                }
+                future.complete(response);
             });
         }
 
-        return CompletableFuture.supplyAsync(() -> {
-                sendMessageToGateway(new EventRequestResponseWrapper<>(
-                    UniqueIdentifierGenerator.generateId(),
-                    new GatewayCapabilitiesRequestEvent()
-                ));
+        sendMessageToGateway(new GatewayCapabilitiesRequestEvent());
 
-                // Wait for response indefinitely as timeout handled on CompletableFuture
-                try {
-                    synchronized (responseRef) {
-                        responseRef.wait();
-                    }
-                } catch (InterruptedException ignored) {
-                } finally {
-                    synchronized (eventConsumerMap) {
-                        eventConsumerMap.remove(GatewayCapabilitiesResponseEvent.class);
-                    }
-                }
-                return responseRef.get();
-            }, executorService)
+        return future
             .orTimeout(RESPONSE_TIMEOUT_MILLIS, TimeUnit.MILLISECONDS)
             .whenComplete((result, ex) -> {
-                if (ex instanceof TimeoutException) {
-                    synchronized (responseRef) {
-                        responseRef.notify();
-                    }
+                synchronized (eventConsumerMap) {
+                    eventConsumerMap.remove(GatewayCapabilitiesResponseEvent.class);  // Cleanup
+                }
+                if (ex != null && !(ex instanceof TimeoutException)) {
+                    // Re-throw unexpected exceptions
+                    throw new RuntimeException("Failed to get gateway response", ex);
                 }
             });
     }
@@ -261,106 +251,66 @@ public class GatewayConnector {
             throw new IllegalStateException(msg);
         }
 
-        final AtomicReference<GatewayTunnelStartResponseEvent> responseRef = new AtomicReference<>();
+        CompletableFuture<Void> future = new CompletableFuture<>();
 
         synchronized (eventConsumerMap) {
             if (eventConsumerMap.containsKey(GatewayTunnelStartResponseEvent.class)) {
                 return CompletableFuture.failedFuture(new IllegalArgumentException("A start tunnel request is already pending"));
             }
 
-            eventConsumerMap.put(GatewayTunnelStartResponseEvent.class, (msgID, e) -> {
+            eventConsumerMap.put(GatewayTunnelStartResponseEvent.class, (e) -> {
                 GatewayTunnelStartResponseEvent response = (GatewayTunnelStartResponseEvent) e;
-
-                synchronized (responseRef) {
-                    responseRef.set(response);
-                    responseRef.notify();
+                if (response != null && response.getError() != null) {
+                    throw new RuntimeException("Failed to start tunnel: error=" + response.getError() + ", " + tunnelInfo);
                 }
+                future.complete(null);
             });
         }
 
-        return CompletableFuture.runAsync(() -> {
-            sendMessageToGateway(new EventRequestResponseWrapper<>(
-                tunnelInfo.getId(),
+        sendMessageToGateway(
                 new GatewayTunnelStartRequestEvent(gatewayService.getTunnelSSHHostname(), gatewayService.getTunnelSSHPort(), tunnelInfo)
-            ));
+        );
 
-            // Wait for response indefinitely as timeout handled on CompletableFuture
-            try {
-                synchronized (responseRef) {
-                    responseRef.wait();
-                }
-
-                GatewayTunnelStartResponseEvent responseEvent = responseRef.get();
-
-                if (responseEvent != null && responseEvent.getError() != null) {
-                    throw new RuntimeException("Failed to start tunnel: error=" + responseEvent.getError() + ", " + tunnelInfo);
-                }
-            } catch (InterruptedException ignored) {
-            } finally {
-                synchronized (eventConsumerMap) {
-                    eventConsumerMap.remove(GatewayTunnelStartResponseEvent.class);
-                }
-            }
-        }, executorService)
+        return future
                 .orTimeout(RESPONSE_TIMEOUT_MILLIS, TimeUnit.MILLISECONDS)
                 .whenComplete((result, ex) -> {
-                    if (ex instanceof TimeoutException) {
-                        synchronized (responseRef) {
-                            responseRef.notify();
-                        }
+                    synchronized (eventConsumerMap) {
+                        eventConsumerMap.remove(GatewayTunnelStartResponseEvent.class);
+                    }
+                    if (ex != null && !(ex instanceof TimeoutException)) {
+                        // Re-throw unexpected exceptions
+                        throw new RuntimeException("Failed to get gateway response", ex);
                     }
                 });
     }
 
     protected CompletableFuture<Void> stopTunnel(GatewayTunnelInfo tunnelInfo) {
 
-        final AtomicReference<GatewayTunnelStopResponseEvent> responseRef = new AtomicReference<>();
+        CompletableFuture<Void> future = new CompletableFuture<>();
 
         synchronized (eventConsumerMap) {
             if (eventConsumerMap.containsKey(GatewayTunnelStopResponseEvent.class)) {
                 return CompletableFuture.failedFuture(new IllegalArgumentException("A stop tunnel request is already pending"));
             }
 
-            eventConsumerMap.put(GatewayTunnelStopResponseEvent.class, (msgID, e) -> {
+            eventConsumerMap.put(GatewayTunnelStopResponseEvent.class, (e) -> {
                 GatewayTunnelStopResponseEvent response = (GatewayTunnelStopResponseEvent) e;
-
-                synchronized (responseRef) {
-                    responseRef.set(response);
-                    responseRef.notify();
+                if (response != null && response.getError() != null) {
+                    throw new RuntimeException("Failed to stop tunnel: error=" + response.getError() + ", " + tunnelInfo);
                 }
+                future.complete(null);
             });
         }
 
-        return CompletableFuture.runAsync(() -> {
-                sendMessageToGateway(new EventRequestResponseWrapper<>(
-                    tunnelInfo.getId(),
-                    new GatewayTunnelStopRequestEvent(tunnelInfo)
-                ));
-
-                // Wait for response indefinitely as timeout handled on CompletableFuture
-                try {
-                    synchronized (responseRef) {
-                        responseRef.wait();
-                    }
-
-                    GatewayTunnelStopResponseEvent responseEvent = responseRef.get();
-
-                    if (responseEvent != null && responseEvent.getError() != null) {
-                        throw new RuntimeException("Failed to stop tunnel: error=" + responseEvent.getError() + ", " + tunnelInfo);
-                    }
-                } catch (InterruptedException ignored) {
-                } finally {
-                    synchronized (eventConsumerMap) {
-                        eventConsumerMap.remove(GatewayTunnelStopResponseEvent.class);
-                    }
-                }
-            }, executorService)
+        return future
             .orTimeout(RESPONSE_TIMEOUT_MILLIS, TimeUnit.MILLISECONDS)
             .whenComplete((result, ex) -> {
-                if (ex instanceof TimeoutException) {
-                    synchronized (responseRef) {
-                        responseRef.notify();
-                    }
+                synchronized (eventConsumerMap) {
+                    eventConsumerMap.remove(GatewayTunnelStopResponseEvent.class);
+                }
+                if (ex != null && !(ex instanceof TimeoutException)) {
+                    // Re-throw unexpected exceptions
+                    throw new RuntimeException("Failed to get gateway response", ex);
                 }
             });
     }
@@ -375,7 +325,7 @@ public class GatewayConnector {
 
     protected void setDisabled(boolean disabled) {
         this.disabled = disabled;
-        this.disconnect();
+        disconnect(GatewayDisconnectEvent.Reason.DISABLED);
     }
 
     protected String getSessionId() {
@@ -383,26 +333,30 @@ public class GatewayConnector {
     }
 
     protected void publishAttributeEvent(AttributeEvent event) {
-        assetProcessingService.sendAttributeEvent(event, GatewayService.class.getName());
+        assetProcessingService.sendAttributeEvent(event, GatewayService.class.getSimpleName());
     }
 
-    synchronized protected void onGatewayEvent(String messageId, SharedEvent e) {
-
-        if (initialSyncInProgress) {
-            if (e instanceof AssetsEvent) {
-                onSyncAssetsResponse(messageId, (AssetsEvent) e);
-            } else if (e instanceof AttributeEvent) {
-                cachedAttributeEvents.add((AttributeEvent) e);
-            } else if (e instanceof AssetEvent) {
-                cachedAssetEvents.add((AssetEvent) e);
-            }
-        } else {
-            synchronized (eventConsumerMap) {
-                BiConsumer<String, SharedEvent> consumer = eventConsumerMap.get(e.getClass());
-                if (consumer != null) {
-                    consumer.accept(messageId, e);
+    synchronized protected void onGatewayEvent(SharedEvent e) {
+        try {
+            if (initialSyncInProgress) {
+                if (e instanceof AssetsEvent) {
+                    onSyncAssetsResponse((AssetsEvent) e);
+                } else if (e instanceof AttributeEvent) {
+                    cachedAttributeEvents.add((AttributeEvent) e);
+                } else if (e instanceof AssetEvent) {
+                    cachedAssetEvents.add((AssetEvent) e);
+                }
+            } else {
+                synchronized (eventConsumerMap) {
+                    Consumer<SharedEvent> consumer = eventConsumerMap.get(e.getClass());
+                    if (consumer != null) {
+                        consumer.accept(e);
+                    }
                 }
             }
+        } catch (Exception ex) {
+            LOG.log(Level.WARNING, ex, () -> "An error occurred while processing a gateway event: event=" + e + ", connector=" + this);
+            disconnect(GatewayDisconnectEvent.Reason.SYNC_ERROR);
         }
     }
 
@@ -416,10 +370,10 @@ public class GatewayConnector {
         }
 
         expectedSyncResponseName = ASSET_READ_EVENT_NAME_INITIAL;
-        sendMessageToGateway(new EventRequestResponseWrapper<>(
-            ASSET_READ_EVENT_NAME_INITIAL,
-            new ReadAssetsEvent(new AssetQuery().select(new AssetQuery.Select().excludeAttributes()).recursive(true))));
-        syncProcessorFuture = executorService.schedule(this::onSyncAssetsTimeout, RESPONSE_TIMEOUT_MILLIS, TimeUnit.MILLISECONDS);
+        ReadAssetsEvent event = new ReadAssetsEvent(new AssetQuery().select(new AssetQuery.Select().excludeAttributes()).recursive(true));
+        event.setMessageID(expectedSyncResponseName);
+        sendMessageToGateway(event);
+        syncProcessorFuture = scheduledExecutorService.schedule(this::onSyncAssetsTimeout, RESPONSE_TIMEOUT_MILLIS, TimeUnit.MILLISECONDS);
     }
 
     /**
@@ -468,22 +422,21 @@ public class GatewayConnector {
         expectedSyncResponseName = ASSET_READ_EVENT_NAME_BATCH + syncIndex;
 
         LOG.fine("Synchronising gateway assets " + syncIndex+1 + "-" + syncIndex + requestAssetIds.length + " of " + syncAssetIds.size() + ": " + this);
-        sendMessageToGateway(
-            new EventRequestResponseWrapper<>(
-                expectedSyncResponseName,
-                new ReadAssetsEvent(
-                    new AssetQuery()
-                        .ids(requestAssetIds)
-                )
-            )
+        ReadAssetsEvent event = new ReadAssetsEvent(
+            new AssetQuery()
+                .ids(requestAssetIds)
         );
-        syncProcessorFuture = executorService.schedule(this::requestAssets, RESPONSE_TIMEOUT_MILLIS, TimeUnit.MILLISECONDS);
+        event.setMessageID(expectedSyncResponseName);
+        sendMessageToGateway(event);
+        syncProcessorFuture = scheduledExecutorService.schedule(this::requestAssets, RESPONSE_TIMEOUT_MILLIS, TimeUnit.MILLISECONDS);
     }
 
-    synchronized protected void onSyncAssetsResponse(String messageId, AssetsEvent e) {
+    synchronized protected void onSyncAssetsResponse(AssetsEvent e) {
         if (!isConnected()) {
             return;
         }
+
+        String messageId = e.getMessageID();
 
         if (!expectedSyncResponseName.equalsIgnoreCase(messageId)) {
             LOG.info("Unexpected response from gateway so ignoring (expected=" + expectedSyncResponseName + ", actual =" + messageId + "): " + this);
@@ -550,7 +503,7 @@ public class GatewayConnector {
             // Returned asset order may not match request order so re-order
             returnedAssets = returnedAssets.stream()
                 .sorted(Comparator.comparingInt(a -> syncAssetIds.indexOf(a.getId())))
-                .collect(Collectors.toList());
+                .toList();
 
             // Merge returned assets ensuring the latest version of each is merged
             returnedAssets.stream()
@@ -647,165 +600,16 @@ public class GatewayConnector {
             }
             tunnellingSupported = response != null && response.isTunnelingSupported();
             publishAttributeEvent(new AttributeEvent(gatewayId, GatewayAsset.TUNNELING_SUPPORTED, tunnellingSupported));
+            publishAttributeEvent(new AttributeEvent(gatewayId, GatewayAsset.STATUS, ConnectionStatus.CONNECTED));
         });
-    }
-
-    @SuppressWarnings("unchecked")
-    protected <T extends Asset<?>> T mergeGatewayAsset(T asset, boolean isUpdate) {
-
-        if (!isConnected() || isInitialSyncInProgress()) {
-            String msg = "Gateway is not connected or initial sync in progress so cannot merge asset: Asset<?> ID=" + asset.getId() + ": " + this;
-            LOG.info(msg);
-            throw new IllegalStateException(msg);
-        }
-
-        final String id = asset.getId();
-        final String parentId = asset.getParentId();
-
-        synchronized (pendingAssetMerges) {
-
-            if (id != null && pendingAssetMerges.containsKey(id)) {
-                String msg = "Gateway asset merge already pending for this asset: Asset<?> ID=" + id + ": " + this;
-                LOG.info(msg);
-                throw new IllegalStateException(msg);
-            }
-
-            if (id == null) {
-                // Generate an ID to allow tracking the asset when it is returned from the gateway
-                asset.setId(UniqueIdentifierGenerator.generateId());
-            } else {
-                // Put original gateway asset ID back
-                asset.setId(mapAssetId(gatewayId, id, true));
-            }
-
-            if (gatewayId.equals(parentId)) {
-                asset.setParentId(null);
-            } else if (parentId != null) {
-                // Put original parent asset ID back
-                asset.setParentId(mapAssetId(gatewayId, parentId, true));
-            }
-
-            sendMessageToGateway(new AssetEvent(isUpdate ? AssetEvent.Cause.UPDATE : AssetEvent.Cause.CREATE, asset, null));
-            pendingAssetMerges.put(asset.getId(), null);
-        }
-
-        synchronized (asset.getId()) {
-            try {
-                asset.getId().wait(RESPONSE_TIMEOUT_MILLIS);
-
-                T mergedAsset;
-                synchronized (pendingAssetMerges) {
-                    mergedAsset = (T)pendingAssetMerges.remove(asset.getId());
-                }
-
-                if (mergedAsset == null) {
-                    throw new IllegalStateException("Gateway asset merge failed:  Asset ID=" + asset.getId() + ", Asset ID Mapped=" + id + ": " + this);
-                }
-
-                return mergedAsset;
-
-            } catch (InterruptedException e) {
-                String msg = "Gateway asset merge interrupted: Asset ID=" + asset.getId() + ", Asset ID Mapped=" + id + ": " + this;
-                LOG.info(msg);
-                throw new IllegalStateException(msg);
-            } finally {
-                synchronized (pendingAssetMerges) {
-                    pendingAssetMerges.remove(asset.getId());
-                }
-                asset.setId(id);
-                asset.setParentId(parentId);
-            }
-        }
-    }
-
-    protected boolean deleteGatewayAssets(List<String> assetIds) {
-
-        if (!isConnected() || isInitialSyncInProgress()) {
-            String msg = "Gateway is not connected or initial sync in progress so cannot delete asset(s):  Asset<?> IDs=" + Arrays.toString(assetIds.toArray()) + ": " + this;
-            LOG.info(msg);
-            throw new IllegalStateException(msg);
-        }
-
-        synchronized (pendingAssetDelete) {
-
-            if (pendingAssetDelete.get() != null) {
-                String msg = "Gateway asset delete already pending: Asset<?> IDs Mapped=" + Arrays.toString(pendingAssetDelete.get().getEvent().getAssetIds().toArray()) + ": " + this;
-                LOG.info(msg);
-                throw new IllegalStateException(msg);
-            }
-
-            List<String> originalIds = assetIds.stream().map(id -> mapAssetId(gatewayId, id, true)).toList();
-
-            pendingAssetDelete.set(new EventRequestResponseWrapper<>(
-                UniqueIdentifierGenerator.generateId(),
-                new DeleteAssetsRequestEvent(new ArrayList<>(originalIds))
-            ));
-
-            try {
-                sendMessageToGateway(pendingAssetDelete.get());
-                pendingAssetDelete.wait(RESPONSE_TIMEOUT_MILLIS);
-                if (pendingAssetDelete.get() != null) {
-                    throw new IllegalStateException("Gateway asset delete failed: Asset<?> IDs=" + originalIds + ", Asset<?> IDs Mapped=" + Arrays.toString(assetIds.toArray()) + ": " + this);
-                }
-                return true;
-            } catch (InterruptedException e) {
-                String msg = "Gateway asset delete interrupted: Asset<?> IDs=" + originalIds + ", Asset<?> IDs Mapped=" + Arrays.toString(assetIds.toArray()) + ": " + this;
-                LOG.info(msg);
-                throw new IllegalStateException(msg);
-            } finally {
-                pendingAssetDelete.set(null);
-            }
-        }
-    }
-
-    protected void onAssetDeleteResponseEvent(String messageId, DeleteAssetsResponseEvent e) {
-
-        synchronized (pendingAssetDelete) {
-            if (pendingAssetDelete.get() == null) {
-                return;
-            }
-
-            if (!pendingAssetDelete.get().getMessageId().equals(messageId)) {
-                LOG.info("Gateway asset delete response name does not match request so ignoring: " + this);
-                return;
-            }
-
-            if (e.isDeleted()) {
-                pendingAssetDelete.set(null);
-            }
-
-            pendingAssetDelete.notify();
-        }
     }
 
     @SuppressWarnings("SynchronizationOnLocalVariableOrMethodParameter")
     synchronized protected void onAssetEvent(AssetEvent e) {
 
         switch (e.getCause()) {
-            case CREATE, READ, UPDATE -> {
-                String assetId = e.getId();
-                Asset<?> mergedAsset = saveAssetLocally(e.getAsset());
-                synchronized (pendingAssetMerges) {
-                    if (pendingAssetMerges.containsKey(assetId)) {
-                        @SuppressWarnings("OptionalGetWithoutIsPresent")
-                        Map.Entry<String, Asset<?>> pendingAssetMergeEntry = pendingAssetMerges.entrySet().stream().filter(entry -> entry.getKey().equals(assetId)).findFirst().get();
-                        String id = pendingAssetMergeEntry.getKey();
-                        pendingAssetMergeEntry.setValue(mergedAsset);
-
-                        synchronized (id) {
-                            // Notify the waiting merge thread
-                            id.notify();
-                        }
-                    }
-                }
-            }
-            case DELETE -> {
-                try {
-                    deleteAssetsLocally(Collections.singletonList(mapAssetId(gatewayId, e.getId(), false)));
-                } catch (Exception ex) {
-                    LOG.log(Level.SEVERE, "Removing obsolete asset failed: " + e.getId() + ": " + this, ex);
-                }
-            }
+            case CREATE, READ, UPDATE -> saveAssetLocally(e.getAsset());
+            case DELETE -> deleteAssetsLocally(Collections.singletonList(mapAssetId(gatewayId, e.getId(), false)));
         }
     }
 
@@ -820,12 +624,16 @@ public class GatewayConnector {
         asset.setParentId(asset.getParentId() != null ? mapAssetId(gatewayId, asset.getParentId(), false) : gatewayId);
         asset.setRealm(realm);
         LOG.fine("Creating/updating gateway asset: Asset ID=" + assetId + ", Asset ID Mapped=" + asset.getId() + ": " + this);
-        return assetStorageService.merge(asset, true, true, null);
+        return assetStorageService.merge(asset, true, gatewayAsset, null);
     }
 
     protected boolean deleteAssetsLocally(List<String> assetIds) {
         LOG.fine("Removing gateway asset: Asset IDs=" + Arrays.toString(assetIds.toArray()) + ": " + this);
         return assetStorageService.delete(assetIds, true);
+    }
+
+    public GatewayAsset getGatewayAsset() {
+        return gatewayAsset;
     }
 
     @Override
